.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
19:27:29 **** Incremental Build of configuration Debug for project example ****
make -j16 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F103x6 -c -I../Core/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F1xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/main.o"
arm-none-eabi-gcc "../Core/Src/software_timer.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F103x6 -c -I../Core/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F1xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/software_timer.d" -MT"Core/Src/software_timer.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/software_timer.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:324:4: warning: implicit declaration of function 'updateClockBuffer' [-Wimplicit-function-declaration]
  324 |    updateClockBuffer(minute, hour);
      |    ^~~~~~~~~~~~~~~~~
../Core/Src/main.c:330:5: warning: implicit declaration of function 'update7SEG' [-Wimplicit-function-declaration]
  330 |     update7SEG(index_led++);
      |     ^~~~~~~~~~
../Core/Src/main.c:330:16: error: 'index_led' undeclared (first use in this function)
  330 |     update7SEG(index_led++);
      |                ^~~~~~~~~
../Core/Src/main.c:330:16: note: each undeclared identifier is reported only once for each function it appears in
../Core/Src/main.c:331:18: error: 'MAX_LED' undeclared (first use in this function)
  331 |     index_led %= MAX_LED;
      |                  ^~~~~~~
make: *** [Core/Src/subdir.mk:37: Core/Src/main.o] Error 1
"make -j16 all" terminated with exit code 2. Build might be incomplete.
